sat hoc add mod 10 carto/graphic
adding to port

--- a/index.html
+++ b/index.html
@@ -233,6 +233,20 @@
                         <p class="text-muted"></p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/sat_hoc.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Satellites</h4>
+                        <p class="text-muted"></p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -783,6 +797,30 @@
         </div>
     </div>
 	
+<!-- Portfolio Modal 10 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Satellites</h2>
+                            <p class="item-intro text-muted">Created for Volume 6 of The History of Cartography Project</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/sat_hoc.jpg" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 	
 <!-- 	-------------- -->
 	
