--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/endangered.PNG" class="img-responsive" alt="">
+                        <img src="img/portfolio/endangered.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Endangered Species</h4>
