--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Syria Program Map</h2>
                             <p class="item-intro text-muted">Created for USAID/OFDA (under MacFadden)</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/full/SyriaProgramMap_test.pdf" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/full/SyriaProgramMap_test.png" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
