--- a/index.html
+++ b/index.html
@@ -261,6 +261,20 @@
                         <p class="text-muted"></p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/chilemap.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Map Booklet Series: Chile</h4>
+                        <p class="text-muted"></p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -851,7 +865,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Syria Program Map</h2>
-                            <p class="item-intro text-muted">Created for USAID/OFDA (under MacFadden)</p>
+                            <p class="item-intro text-muted">Restyling of old and cluttered symbol maps brought about this new map spec for this kind of map. See CV for link to talk about the changes. Created for USAID/OFDA (under MacFadden)</p>
                             <img class="img-responsive img-centered" src="img/portfolio/full/SyriaProgramMap_test.png" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -860,7 +874,30 @@
             </div>
         </div>
     </div>
-   
+ <!-- Portfolio Modal 12 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Map Booklet Series: Chile</h2>
+                            <p class="item-intro text-muted">An aesthetic overall of 34+ countries in the Latin America & Caribbean Region, created for USAID/OFDA (under MacFadden)</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/full/Chilemapbooklet.png" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <!-- 	-------------- -->
 	
 <!-- Portfolio Mod 1 -->
