--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
                             <h2>International Learning Community Logo</h2>
                             <p class="item-intro text-muted">When the ILC of UW-Madison saw my hand painted watercolor art of something similar, they requested
                             a version that could be used as a logo. This PNG, created using a tablet and Photoshop, is the result.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/full/ILC.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/full/ILC.jpg" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
