--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
