--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <img src="img/portfolio/prog.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Aesthetic Redesign: Programs</h4>
+                        <h4>Redesign: Program Maps</h4>
                         <p class="text-muted"></p>
                     </div>
                 </div>
@@ -458,7 +458,7 @@
                         <img src="img/portfolio/tropo.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Aesthetic Redesign: Tropical Cyclone</h4>
+                        <h4>Redesign: Tropical Cyclone Maps</h4>
                         <p class="text-muted"></p>
                     </div>
                 </div>
