--- a/test/test.html
+++ b/test/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>D3 World Map Template | TechSlides</title>
+<!--credit to Techslides for original code techslides.com-->
+
+<title>Test test test test </title>
 <style>
 .country:hover{
   stroke: #fff;
@@ -46,8 +48,7 @@ div.tooltip {
 </head>
 <body>
 
-  <h1>World Map Template with D3.js</h1>
-  <p>Responsive D3 World Map with zoom and pan limits, graticule and equator lines, optimized TopoJSON with country names and colors, geo translation functions, geo coordinate plotting functions for points and text, and much more.  For a full list of features, please go <a href="http://techslides.com/d3-map-starter-kit/">back to article</a>.</p>
+  <p>d3 responsive map test </p>
 
 
   <div id="container"></div>
