--- a/test/test.html
+++ b/test/test.html
@@ -9,9 +9,9 @@
   stroke-width: 1.5px;
 }
 .text{
-  font-size:10px;
+    font-size:10px;
     font-family: Arial;
-  text-transform:capitalize;
+    text-transform:capitalize;
 }
 #container {
   margin:10px 10%;
@@ -29,6 +29,7 @@ div.tooltip {
   background: #fff; 
   padding: .5em; 
   text-shadow: #f5f5f5 0 1px 0;
+    font-family: Arial;
   border-radius: 2px; 
   box-shadow: 0px 0px 2px 0px #a6a6a6; 
   opacity: 0.9; 
