--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,7 @@
 }
 .text{
     font-size:10px;
-    font-family: Arial;
+    font-family: sans-serif;
     text-transform:capitalize;
 }
 #container {
@@ -29,7 +29,6 @@ div.tooltip {
   background: #fff; 
   padding: .5em; 
   text-shadow: #f5f5f5 0 1px 0;
-    font-family: Arial;
   border-radius: 2px; 
   box-shadow: 0px 0px 2px 0px #a6a6a6; 
   opacity: 0.9; 
