--- a/test/test.html
+++ b/test/test.html
@@ -28,6 +28,7 @@ div.tooltip {
   color: #222; 
   background: #fff; 
   padding: .5em; 
+    font-family: sans-serif;
   text-shadow: #f5f5f5 0 1px 0;
   border-radius: 2px; 
   box-shadow: 0px 0px 2px 0px #a6a6a6; 
