--- a/test/test.html
+++ b/test/test.html
@@ -16,8 +16,8 @@
 }
 #container {
   margin:10px 10%;
-  border:2px solid #000;
-  border-radius: 25px;
+  border:2px solid #fff;
+  border-radius: 5px;
   height:100%;
   overflow:hidden;
   background: #F0F8FF;
@@ -31,7 +31,7 @@ div.tooltip {
   padding: .5em; 
     font-family: sans-serif;
   text-shadow: #f5f5f5 0 1px 0;
-  border-radius: 2px; 
+  border-radius: 25px; 
   box-shadow: 0px 0px 2px 0px #a6a6a6; 
   opacity: 0.9; 
   position: absolute;
