--- a/test/test.html
+++ b/test/test.html
@@ -125,6 +125,7 @@ function draw(topo) {
       .attr("d", path)
       .attr("id", function(d,i) { return d.id; })
       .attr("title", function(d,i) { return d.properties.name; })
+  console.log(d.properties.color);
       .style("fill", function(d, i) { return d.properties.color; });
 
   //offsets for tooltips
