--- a/test/test.html
+++ b/test/test.html
@@ -124,8 +124,7 @@ function draw(topo) {
       .attr("class", "country")
       .attr("d", path)
       .attr("id", function(d,i) { return d.id; })
-      .attr("title", function(d,i) { return d.properties.name; })
-  console.log(d.properties.color);
+      .attr("title", function(d,i) { return d.properties.name; });
       .style("fill", function(d, i) { return d.properties.color; });
 
   //offsets for tooltips
