--- a/test/test.html
+++ b/test/test.html
@@ -95,12 +95,16 @@ function setup(width,height){
 
 }
 
-d3.json("data/world-topo-min.json", function(error, world) {
+var worldjson = "data/world-topo-min.json"; 
+
+    
+d3.json(worldjson, function(error, world) {
 
   var countries = topojson.feature(world, world.objects.countries).features;
 
   topo = countries;
   draw(topo);
+
 
 });
 
