--- a/test/test.html
+++ b/test/test.html
@@ -79,7 +79,8 @@ setup(width,height);
 
 function setup(width,height){
   projection = d3.geo.mercator()
-    .translate([(width/2), (height/2)])
+/*  centering here */
+    .translate([(width/2), (height/2 +90)])
     .scale( width / 2 / Math.PI);
 
   path = d3.geo.path().projection(projection);
@@ -95,6 +96,7 @@ function setup(width,height){
 
 }
 
+/*name var to avoid potential script issues*/
 var worldjson = "data/world-topo-min.json"; 
 
     
@@ -128,8 +130,9 @@ function draw(topo) {
       .attr("class", "country")
       .attr("d", path)
       .attr("id", function(d,i) { return d.id; })
-      .attr("title", function(d,i) { return d.properties.name; })
-      .style("fill", function(d,i) { return d.properties.color; });
+      .attr("title", function(d,i) { return d.properties.name; });
+   /* deleting to avoid topo json defined colors, for now -->>>>>*/
+      /*.style("fill", function(d,i) { return d.properties.color; });*/
 
   //offsets for tooltips
   var offsetL = document.getElementById('container').offsetLeft+20;
@@ -151,14 +154,14 @@ function draw(topo) {
       }); 
 
 
-  //EXAMPLE: adding some capitals from external CSV file
+/*  //EXAMPLE: adding some capitals from external CSV file
   d3.csv("data/country-capitals.csv", function(err, capitals) {
 
     capitals.forEach(function(i){
       addpoint(i.CapitalLongitude, i.CapitalLatitude, i.CapitalName );
     });
 
-  });
+  });*/
 
 }
 
