--- a/test/test.html
+++ b/test/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<!--credit to Techslides for original code techslides.com-->
+<!--credit to Techslides for original base code techslides.com-->
 
 <title>Test test test test </title>
 <style>
