--- a/test/test.html
+++ b/test/test.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<!--simple map test for basic int map
+Vanessa Knoppke-Wetzel 1.26.16-->
 <!--credit to Techslides for original base code techslides.com-->
+
 
 <title>Test test test test </title>
 <style>
