--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Current Work for OFDA</h2>
-                    <h3 class="section-subheading text-muted">I create maps on a daily basis that help OFDA staff make decisions on where and how to help people in need of humanitarian aid around the world. Additionally, since I started working for the Geographic Information Unit of OFDA, I have been on a mission to create better products that are not only aesthetically nicer, but also are easier to understand in OFDA's fast paced decision making environment. Outside of OFDA mapping, I help GIS/cartography outreach within OFDA, but also as a part of the larger humanitarian aid community that seeks to help create more (and better) data and projects for humanitarian use. </h3>
+                    <h2 class="section-heading">Current Work</h2>
+                    <h3 class="section-subheading text-muted">At the Office of Foreign Disaster Assistance, I provide geospatial and cartographic services to USAID/OFDA's humanitarian work in the form of maps and graphics, spatial analysis, and technical team projects. In particular, I lead mapping decisions, research, and production for any needs in Southern and Western African Nations (SWAN). Additionally, I am in charge of new design decisions on my team, with a mission to create better products that are not only aesthetically enhanced, but also are easier to read and therefore understand better in OFDA's fast paced decision making environment. </h3>
                 </div>
             </div>
             <div class="row">
