--- a/index.html
+++ b/index.html
@@ -1214,14 +1214,12 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Disaster Planning: an Example</h2>
-                            <img class="img-responsive img-centered" src="img/portfolio/full/drought.pdf" "alt="">
-                            <p class="item-intro text-muted"> The above map is from the latest mapping project that I have been working on. It was one of many maps
-                                that I produced when OFDA began planning the response for regional drought in Southern Africa. This particular map really helps highlight
-                                the unfortunately terrible conditions in Malawi, and managing to layer the lack of water, historical rainfall, and food insecurities
-                                 really helped my colleagues immediately see at a glance how bad conditions were in specific areas. After this map was produced, I got
-                                 requests for 3 other countries with the same data layers and portrayal. To learn more on the OFDA response and see the current OFDA programming
-                                 map that I update for this response, just <a href="https://www.usaid.gov/crisis/southernafrica" target="_blank">click here</a>.</p>
-                           <p class="item-intro text-muted">  </p>
+                            <img class="img-responsive img-centered" src="img/portfolio/full/drought.png" "alt="">
+                            <p class="item-intro text-muted"> The above map was one of many maps I made during the planning stage of OFDA's response for regional drought in Southern Africa,
+                                 This particular map helps to highlight the unfortunately terrible drought conditions in Malawi - the lack of water, historical rainfall, 
+                                 and food insecurities gave my colleagues an immediate story about how bad conditions were in specific areas. Given the former, after this map was produced,
+                                 I immediately got requests for the same analysis for three other countries, resulting in a map series for part of the region. </p>
+                            <p class="item-intro text-muted"> To learn more on the OFDA response and see the current OFDA programming map that I update for this response, just <a href="https://www.usaid.gov/crisis/southernafrica" target="_blank">click here</a>.</p>
                            
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
