--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/ENSO.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/drought.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Disasters Strike</h4>
