--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/prog.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/prog.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Redesign: Program Maps</h4>
@@ -1219,7 +1219,7 @@
                                  This particular map helps to highlight the unfortunately terrible drought conditions in Malawi - the lack of water, historical rainfall, 
                                  and food insecurities gave my colleagues an immediate story about how bad conditions were in specific areas. Given the former, after this map was produced,
                                  I immediately got requests for the same analysis for three other countries, resulting in a map series for part of the region. </p>
-                            <p class="item-intro text-muted"> To learn more on the OFDA response and see the current OFDA programming map that I update for this response, just <a href="https://www.usaid.gov/crisis/southernafrica" target="_blank">click here</a>.</p>
+                            <p class="item-intro text-muted"> To learn more on the OFDA response and see the current OFDA programming map that I created and update for this response, just <a href="https://www.usaid.gov/crisis/southernafrica" target="_blank">click here</a>.</p>
                            
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
