--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
     <!-- Portfolio Grid Section MAP DESIGN -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
-                                              
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Maps and Graphics</h2>
+                    <h3 class="section-subheading text-muted">some examples of my favorite maps and products</h3>
+                </div>
+             </div>
+             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -118,6 +123,7 @@
                         <p class="text-muted"></p>
                     </div>
                 </div>
+                
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
