--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <a class="page-scroll" href="#webby">Web Design</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#current">Right Now</a>
+                        <a class="page-scroll" href="#current">Currently</a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="#about">Me</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#blog">Mongolia Blog</a>
@@ -854,7 +854,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Cite University</h2>
-                            <p class="item-intro text-muted">Created for the UW-MAdison Cartography Lab</p>
+                            <p class="item-intro text-muted">Created for the UW-Madison Cartography Lab</p>
                             <img class="img-responsive img-centered" src="img/portfolio/cite.jpg" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
