--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#current">Currently</a>
+                        <a class="page-scroll" href="#current">Current</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Maps & Graphics</a>
@@ -66,7 +66,7 @@
                     </li>
 
 					<li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Me</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#blog">Mongolia Blog</a>
