--- a/index.html
+++ b/index.html
@@ -1178,10 +1178,10 @@
                             <!-- Project Details Go Here -->
                             <h2>Disaster Planning: an Example</h2>
                             <img class="img-responsive img-centered" src="img/portfolio/full/drought.png" "alt="">
-                            <p class="item-intro text-muted"> The above map was one of many maps I made during the planning stage of OFDA's response for regional drought in Southern Africa,
-                                 This particular map helps to highlight the unfortunately terrible drought conditions in Malawi - the lack of water, historical rainfall, 
-                                 and food insecurities gave my colleagues an immediate story about how bad conditions were in specific areas. Given the former, after this map was produced,
-                                 I immediately got requests for the same analysis for three other countries, resulting in a map series for part of the region. </p>
+                            <p class="item-intro text-muted"> The above map was one of many maps I made during the planning stage of OFDA's response for regional drought in Southern Africa:
+                                 it helps to highlight the unfortunately terrible drought conditions in Malawi, highlighting the water, historical rainfall, 
+                                 and food insecurities throughout the country. My colleagues in SWAN found this map quite useful, and so requested a series of maps
+                                 with the same data analysis for three other countries severely affected by the drought conditions. </p>
                             <p class="item-intro text-muted"> To learn more on the OFDA response and see the current OFDA programming map that I created and update for this response, just <a href="https://www.usaid.gov/crisis/southernafrica" target="_blank">click here</a>.</p>
                            
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
