--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>April 2015 - present</h4>
-                                    <h4 class="subheading">GIS Analyst: MacFadden for USAID/OFDA</h4>
+                                    <h4 class="subheading">MacFadden for USAID/OFDA: GIS Analyst</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted"> In April I packed my bags and left Wisconsin and moved to DC, where I currently provide geospatial services to USAID/OFDA's humanitarian work in 
