change h3 to allow for title changes

--- a/sites/timeline.html
+++ b/sites/timeline.html
@@ -11,7 +11,7 @@
 <body>
 
   <div>
-    <h3>Funding Gantt Chart</h3>
+    <h3><span id="title"> </span></h3>
     <div id="timeline"></div>
   </div>
   <div id="months"> </div>
