--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+<!--     <header>
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome!</div>
@@ -97,7 +97,7 @@
                 <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
-    </header>
+    </header> -->
 
 
 <!-- Portfolio Grid Section CURRENT WORK, images  -->
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Current </h2>
-                    <h3 class="section-subheading text-muted">At the Office of Foreign Disaster Assistance, I provide geospatial and cartographic services to USAID/OFDA's humanitarian work in the form of maps and graphics, spatial analysis, and technical team projects. In particular, I lead mapping decisions, research, and production for any needs in Southern and Western African Nations (SWAN). Additionally, I am in charge of new design decisions on my team, with a mission to create better products that are not only aesthetically enhanced, but also are easier to read and therefore understand better in OFDA's fast paced decision making environment. </h3>
+                    <!-- <h3 class="section-subheading text-muted">At the Office of Foreign Disaster Assistance, I provide geospatial and cartographic services to USAID/OFDA's humanitarian work in the form of maps and graphics, spatial analysis, and technical team projects. In particular, I lead mapping decisions, research, and production for any needs in Southern and Western African Nations (SWAN). Additionally, I am in charge of new design decisions on my team, with a mission to create better products that are not only aesthetically enhanced, but also are easier to read and therefore understand better in OFDA's fast paced decision making environment. </h3> -->
                 </div>
             </div>
             <div class="row">
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Maps and Graphics</h2>
-                    <h3 class="section-subheading text-muted">some examples of my favorite maps and products</h3>
+                    <!-- <h3 class="section-subheading text-muted">some examples of my favorite maps and products</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -389,7 +389,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Web Design</h2>
-                    <h3 class="section-subheading text-muted">below are some examples of how code, design, and maps can unite to create informative data visualizations</h3>
+                    <!-- <h3 class="section-subheading text-muted">below are some examples of how code, design, and maps can unite to create informative data visualizations</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -563,8 +563,8 @@
                                     <h4 class="subheading">The History of Cartography Project</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Under UW-Madison Cartography Lab employment, created any necessary graphic designs for the History
-									of Cartography Project’s 6th book volume, ranging from maps to diagrams and infographics. www.geography.wisc.edu/histcart/series.html#v6 </p>
+                                    <p class="text-muted">Under UW-Madison Cartography Lab employment, created any necessary graphic designs for the <a href="https://geography.wisc.edu/histcart/volume-6-cartography-in-the-twentieth-century/" target="_blank"> History
+									of Cartography Project’s 6th book volume</a>, ranging from maps to diagrams and infographics.  </p>
                                 </div>
                             </div>
                         </li>
