--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </li> -->
 
 					<li>
-                        <a class="page-scroll" href="#about">About Me</a>
+                        <a class="page-scroll" href="#about">CV</a>
                     </li>
           
 					<li>
@@ -411,7 +411,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <h3 class="section-subheading text-muted">
-                    Click <a href="img/portfolio/full/resume.pdf" target="_blank"><b>HERE</a></b> for a detailed, printable CV.
+                    Click <a href="img/portfolio/full/resume.pdf" target="_blank"><b>HERE</a></b> for a more detailed, printable CV.
                     <br><Br>
                     I am a detail oriented designer, cartographer, geographer, and programmer experienced in and passionate about creating 
 					visual stories in a fast paced environment through geo-visualizations. Whether on my own or with a team, I thoroughly enjoy finding imaginative and creative solutions 
