--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Vanessa Knoppke-Wetzel 2015</span>
+                    <span class="copyright"> </span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
