about me update

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     <h3 class="section-subheading text-muted">
                     Click <a href="img/portfolio/full/resume.pdf" target="_blank"><b>HERE</a></b> for a more detailed, printable CV.
                     <br><Br>
-                    I am a detail oriented designer, cartographer, geographer, and programmer experienced in and passionate about creating 
+                    I am a detail oriented cartographer, designer researcher, and general "data viz"-er experienced in and passionate about creating 
 					visual stories in a fast paced environment through geo-visualizations. Whether on my own or with a team, I thoroughly enjoy finding imaginative and creative solutions 
 					for all design requests, from exclusively print products to more complicated interactive, web-based work. </h3>
                 </div>
