--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>5 Years of GEBF </h2>
                                 <img class="img-responsive img-centered" src="img/portfolio/full/gebf.jpg" alt="">
-                                <p class="item-intro text-muted">I created this two-page spread for the <a href="http://www.nfwf.org/whoweare/mediacenter/Documents/gebf-five-year-report-2018.pdf" target="_blank">5 Year GEBF Report</a>.
+                                <p class="item-intro text-muted">I created this two-page spread for the 5 Year GEBF Report: see full spread <a href="http://www.nfwf.org/whoweare/mediacenter/Documents/gebf-five-year-report-2018.pdf" target="_blank">here</a>.
                                     This graphic helps to showcase the entire Gulf area impacted by Deepwater Horizon and the funded project locations across the coast. Additionally, the timeline and chart help to visualize the enormous impact of the past, present, and future of the Fund. </p>
                             
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
