--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Vanessa Knoppke-Wetzel</title>
-
+    <link rel="shortcut icon" href="img/wolf.ico" type="image/x-icon" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -153,7 +153,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/ofdasmall.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/ofdasmall.ico" class="img-responsive" alt="">
                     </a>
                 </div>
 
